--- a/HTML+CSS/HTML_ex19(input).html
+++ b/HTML+CSS/HTML_ex19(input).html
@@ -14,6 +14,7 @@
     </style>
 </head>
 <body>
+    <!-- 로그인 화면-->
     <form id="login-form" action="./login_check.jsp" method="get">
         <input type="text" placeholder="아이디 입력"> <br/>
         <input type="password" placeholder="비밀번호 입력"><br/>
