--- a/HTML+CSS/HTML_ex24.html
+++ b/HTML+CSS/HTML_ex24.html
@@ -5,8 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            padding:0px;
+            margin:0px;
+        }
+        div{
+            width:100px;
+            height:100px;
+        }
+
+
+        #box1{
+            background-color: aqua;
+        }
+
+        #box2{
+            background-color: red;
+            position:relative;
+            top:0px;
+            left:100px;
+            
+        }
+
+        #box3{
+            background-color: purple;
+            position:relative;
+            top:0px;
+            left:200px;        
+        }
+        /*
+            position: relative,absoluted,fixed; --> 자주 쓴다.
+
+            relative    - 현재위치 기준으로 (상대적으로) ~만큼 옮긴다.
+            absoluted   - 부모위치 기준으로 ~만큼 옮긴다.
+            fixed       - 
+        */
+    </style>
 </head>
 <body>
-    
+    <div id="box1">
+
+    </div>
+
+    <div id="box2">
+
+    </div>
+
+    <div id="box3">
+
+    </div>
 </body>
 </html>
