--- a/HTML+CSS/HTML_ex29.html
+++ b/HTML+CSS/HTML_ex29.html
@@ -5,8 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        @font-face{
+            src:url("./fonts/Cafe24Ssurround.ttf");
+            font-family:"mymy";     
+        }
+        @font-face{            
+            src:url("./fonts/GmarketSansTTFMedium.ttf");
+            font-family:"med";
+        }
+        @font-face{
+            src:url("./fonts/GmarketSansTTFLight.ttf");
+            font-family:"light";
+        }
+        @font-face{
+            src:url("./fonts/GmarketSansTTFBold.ttf");
+            font-family:"bold";
+        }
+
+        #wrap{
+            font-family:"mymy";
+        }
+
+        #f1{
+            font-family:"bold";
+        }
+        #f2{
+            font-family:"light";
+        }
+        #f3{
+            font-family:"med";
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="wrap">
+        카페24 폰트
+    </div>
+    <div id="f1">
+        G마켓 산스 진하게
+    </div>
+    <div id="f2">
+        G마켓 산스 얇게
+    </div>
+    <div id="f3">
+        G마켓 산스 보통
+    </div>
 </body>
 </html>
