--- a/영화관람등급연습/Exercise.html
+++ b/영화관람등급연습/Exercise.html
@@ -15,7 +15,7 @@
                     <span></span>
                     <a href="#">토르</a>
                 </th>
-                <td height="180px">
+                <td height="190px">
                     <div class="time-size">
                         <span class="pos-size">(3관)</span>
                         <span>
@@ -75,8 +75,19 @@
             <tr>
                 <th>볌죄도시2</th>
                 <td>
-                    <div>1</div>
-                    <div>2</div>
+                    <div class="time-size">
+                        <span class="pos-size">(5관)</span>
+                        <span>
+                            <a href="#">12:20</a>
+                        </span>
+                    </div>
+                    <div class="time-size">
+                        <span class="pos-size">(8관)</span>
+                        <span>
+                            <a href="#">18:00</a>
+                            <a href="#">22:55</a>
+                        </span>
+                    </div>
                 </td>
             </tr>
             <tr>
