--- a/영화관람등급연습/movie.html
+++ b/영화관람등급연습/movie.html
@@ -8,32 +8,25 @@
   <link href="./css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <div id="wrap">
-    <header id="header" class="border">
-      <h1>상영 영화</h1>
-      <a href="#">07.09(토)오늘</a>
-    </header>
-    <div id="main" class="border">
-      <div id="title">
-        <div id="thor" class="border display">
-          <div id="age-box12" class="age12"></div>
-          <a class=ctitle href="#">토르: 러브 앤 썬더</a>
-        </div>
-        <div id="city" class="border display">
-          <div class="age12"></div>
-          <a class=ctitle href="#">범죄도시2</a>
-        </div>
-        <div id="witch" class="border display">
-          <div class="age12 age-box"></div>
-          <a class=ctitle href="#">마녀(魔女) Part2. The Other One</a>
-        </div>
-      </div>
-      <div id="time">
-
-      </div>
-
+    <div id="age-box">
+      <ul>
+        <li>
+          <span class="ico_age_age_12"></span>
+          12세 이상 관람가
+        </li>
+        <li>
+          <span class="ico_age_age_15"></span>
+          15세 이상 관람가
+        </li>
+        <li>
+          <span class="ico_age_age_adult"></span>
+          성인 관람가
+        </li>
+        <li>
+          <span class="ico_age_age_all"></span>
+          전체 관람가
+        </li>
+      </ul>
     </div>
-
-  </div>
 </body>
 </html>
