--- a/웹디자인_연습/1번_JUST쇼핑몰/index.html
+++ b/웹디자인_연습/1번_JUST쇼핑몰/index.html
@@ -1,31 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JUST 쇼핑몰</title>
   <link href="./css/style.css" type="text/css" rel="stylesheet">
+  <link href="./css/contents.css" type="text/css" rel="stylesheet">
+  <link href="./css/footer.css" type="text/css" rel="stylesheet">
+  <link href="./css/header.css" type="text/css" rel="stylesheet">
+  <link href="./css/slide.css" type="text/css" rel="stylesheet">
+  <link href="./css/popup.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
+
+  <div id="popup">
+    <div id="popup-img">
+      <img src="./images/popupimg.jpg" alt="팝업이미지">
+    </div>
+    <div id="popup-btn">
+      <input type="checkbox">
+      <label>7일간 열지않기</label>
+      <a href="#">
+        <img src="./images/popup_btn.jpg">
+      </a>
+    </div>
+  </div>
+
   <div id="wrap">
-    <header id="header"> <!-- div랑 역할이 같다, 이름만 다름-->
-      <div id="logo">로고</div>
-      <nav id="nav">네비게이션</nav>
+    <header id="header">
+      <!-- div랑 역할이 같다, 이름만 다름-->
+      <div id="logo">
+        <img src="./images/logo.png" alt="상단로고">
+      </div>
+      <nav id="nav">
+        <ul id="gnb">
+          <li>
+            <a href="#">탑</a>
+            <ul id="lnb">
+              <li><a href="#">블라우스</a></li>
+              <li><a href="#">티</a></li>
+              <li><a href="#">셔츠</a></li>
+              <li><a href="#">니트</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">아우터</a>
+            <ul id="lnb">
+              <li><a href="#">자켓</a></li>
+              <li><a href="#">코트</a></li>
+              <li><a href="#">가디건</a></li>
+              <li><a href="#">머플러</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">팬츠</a>
+            <ul id="lnb">
+              <li><a href="#">청바지</a></li>
+              <li><a href="#">짧은바지</a></li>
+              <li><a href="#">긴바지</a></li>
+              <li><a href="#">레깅스</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">악세서리</a>
+            <ul id="lnb">
+              <li><a href="#">귀걸이</a></li>
+              <li><a href="#">목걸이</a></li>
+              <li><a href="#">반지</a></li>
+              <li><a href="#">팔찌</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div id="slide">
-      슬라이드
+      <div id="slide-contents">
+        <img src="./images/slide1.jpg" alt="슬라이드">
+        <img src="./images/slide2.jpg" alt="슬라이드">
+        <img src="./images/slide3.jpg" alt="슬라이드">
+      </div>
     </div>
     <div id="contents">
-      <div id="cont1">컨텐츠1</div>
-      <div id="cont2">컨텐츠2</div>   
-      <div id="cont3">컨텐츠3</div> 
+      <div id="cont1">
+        <div id="tab">
+            <div id="tab-btn">
+              <a href="#">공지사항</a>
+              <a href="#">갤러리</a>
+            </div>
+            <div id="tab-contents">
+              <div id="notice">
+                <ul>
+                  <li>
+                    <a href="#">
+                      <span>공지사항1</span>
+                      <span>[2022.01.01]</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span>공지사항2</span>
+                      <span>[2022.01.01]</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span>공지사항3</span>
+                      <span>[2022.01.01]</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span>공지사항4</span>
+                      <span>[2022.01.01]</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div id="gallery">
+                <ul>
+                  <li>
+                    <a href="#">
+                      <img src="./images/gallery1.jpg" alt="갤러리1">
+                  </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <img src="./images/gallery2.jpg" alt="갤러리2">
+                  </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <img src="./images/gallery3.jpg" alt="갤러리3">
+                  </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div id="cont2">
+        <a href="#"><img src="./images/banner_img.jpg" alt=""></a>
+      </div>
+      <div id="cont3">
+        <a href="#"><img src="./images/shortcut_img.jpg" alt=""></a>
+      </div>
     </div>
     <div id="footer">
-      <div id="logo">로고</div>
-      <div id="copy">Copyright</div>
-      <div id="sns">SNS</div>
+      <div id="logo">
+        <img src="images/logo2.png" alt="하단로고">
+      </div>
+      <div id="copy">
+        <address>
+          서울시 강남구 테헤란로 152 (역삼동 강남 파이낸스) 대표이사:변광윤<br>
+          사업자 등록번호: 220-81-83676 통신판매업신고: 강남 10630호
+        </address>
+      </div>
+      <div id="sns">
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./images/insta.png" alt="인스타그램">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/fb.png" alt="페이스북">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/kakao.png" alt="카카오">
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </body>
+
 </html>
