2번 Green 복지재단

--- a/웹디자인_연습/2번_GREEN복지재단/index.html
+++ b/웹디자인_연습/2번_GREEN복지재단/index.html
@@ -4,36 +4,164 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Green복지재단</title>
-  <link href="./css/style.css" type="text/css" rel="stylesheet">
+  <title>Document</title>
+  <link href="./css/style.css" type="text/css" rel="stylesheet" />
+  <link href="./css/contents.css" type="text/css" rel="stylesheet" />
+  <link href="./css/footer.css" type="text/css" rel="stylesheet" />
+  <link href="./css/header.css" type="text/css" rel="stylesheet" />
+  <link href="./css/popup.css" type="text/css" rel="stylesheet" />
+  <link href="./css/slide.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
   <div id="wrap">
     <header id="header">
-      <div id="logo">로고</div>
-      <div id="submenu">Submenu</div>
+      <div id="logo">
+        <img src="./images/logo1.png" alt="상단로고">
+      </div>
+      <nav id="nav">
+        <ul id="gnb">
+          <li>
+            <a href="#">
+              메뉴 1
+            </a>
+            <ul id="lnb">
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">
+              메뉴 2
+            </a>
+            <ul id="lnb">
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">
+              메뉴 3
+            </a>
+            <ul id="lnb">
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">
+              메뉴 4
+            </a>
+            <ul id="lnb">
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+              <li><a href="#">서브메뉴</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </header>
-
-    <div id="sub">
-      <div id="submenu">Sub</div>
-      <div id="slide">이미지 슬라이드</div>
-    </div>
-
-    <div id="contents">
-      <div id="notice">공지사항</div>
-      <div id="gall">갤러리</div>
-      <div id="ban">배너</div>
-    </div>
-
-    <div id="footer">
-      <div id="logo">로고</div>
-      <div id="copy">저작권</div>
-      <div id="site">패밀리사이트</div>
-    </div>
-
+    <main>
+      <div id="slide">
+        <img src="./images/slide1.jpg" alt="슬라이드1" />
+        <img src="./images/slide2.jpg" alt="슬라이드2" />
+        <img src="./images/slide3.jpg" alt="슬라이드3" /> 
+      </div>
+      <div id="contents">
+        <div id="con1">
+          <div id="notices">
+            <div id="tab">
+              <div id="tab-btn">
+                <a href="#">공지사항</a>
+              </div>
+            </div>
+            <div id="contents">
+              <ul>
+                <li>
+                  <a href="#">
+                    <span>공지사항</span>
+                    <span>[2022.01.01]</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span>공지사항</span>
+                    <span>[2022.01.01]</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span>공지사항</span>
+                    <span>[2022.01.01]</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span>공지사항</span>
+                    <span>[2022.01.01]</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div id="con2">
+          <div id="gallery">
+            <div id="gallery-btn">
+              <a href="#">갤러리</a>
+            </div>
+            <div id="gallery-container">
+              <ul>
+                <li><a href="#"><img src="./images/gallery1.jpg" alt="갤러리1"></a></li>
+                <li><a href="#"><img src="./images/gallery2.jpg" alt="갤러리2"></a></li>
+                <li><a href="#"><img src="./images/gallery3.jpg" alt="갤러리3"></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div id="con3">
+          <img src="./images/banner.jpg" alt="배너">
+        </div>
+      </div>
+      <footer>
+        <div id="logo">
+          <a href="#">
+            <img src="./images/logo2.png" alt="하단로고">
+          </a>
+        </div>
+        <div id="copy">
+          <address>
+            대구 동구 반월당 빌딩<br>
+            10층 코리아 it 아카데미
+          </address>
+        </div>
+        <div id="site">
+          <ul>
+            <li>
+              <a href="#">
+                <img src="../1번_JUST쇼핑몰/images/kakao.png">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="../1번_JUST쇼핑몰/images/insta.png">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="../1번_JUST쇼핑몰/images/fb.png">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </main>
   </div>
-
-  
-
 </body>
 </html>
