--- a/웹디자인_연습/2번_GREEN복지재단/index.html
+++ b/웹디자인_연습/2번_GREEN복지재단/index.html
@@ -137,7 +137,7 @@
         </div>
         <div id="copy">
           <address>
-            대구 동구 반월당 빌딩<br>
+            대구 동구 반월당 빌딩1<br>
             10층 코리아 it 아카데미
           </address>
         </div>
