--- a/자바스크립트소스/javasScript_11(비트연산자).html
+++ b/자바스크립트소스/javasScript_11(비트연산자).html
@@ -19,8 +19,12 @@
   var num1=5
   var num2=4
   result = (num1&num2)
-  // num1과 num2의 비트를 and 한다.
+  // & : num1과 num2의 비트를 AND 한다. (조건식 다 참이여야 true)
+  // | : 비트를 OR 한다 (조건식 중 하나만 참이어도 true)
+  // ^ : 비트를 XOR 한다.(Exclusive OR) (하나만 참이어도 true, 하지만 모두 다 참이면 false ==> 조건식들이 달라야 true)
+  // ~ : 비트 반전
 
+  // 부호비트 (최상위비트) : MSB = MOST SIGNIFICANT BIT
 </script>
 <body>
   
