--- a/자바스크립트소스/javasScript_25(for).html
+++ b/자바스크립트소스/javasScript_25(for).html
@@ -7,25 +7,13 @@
   <title>예제</title>
 </head>
 <script>
-
-  // 반복문
-  // while
-  // : ~ 하는동안
-
-  // var i = 1
-  // while (i<=3){
-  //   document.write('Hello World!',"<br>")
-  //   i++
-  // }
-
-  var i = 1
-  var dan = Number(prompt("몇단?"))
-
-  while(i<=9){
-    document.write(dan+'x'+i+'='+(dan*i),"<br>")
-    i++
+  var dan = 7;
+  // 초기식   조건식 증감식
+  for(var i=1;i<=9;i++){      // 내부 실행식
+    document.write(dan*i,"<br>")
   }
 
+  // 반복문 : while, do-while, for, 중첩 반복문
 </script>
 <body>
   
