--- a/자바스크립트소스/javasScript_31(함수형태).html
+++ b/자바스크립트소스/javasScript_31(함수형태).html
@@ -7,25 +7,12 @@
   <title>예제</title>
 </head>
 <script>
-
-  // 반복문
-  // while
-  // : ~ 하는동안
-
-  // var i = 1
-  // while (i<=3){
-  //   document.write('Hello World!',"<br>")
-  //   i++
-  // }
-
-  var i = 1
-  var dan = Number(prompt("몇단?"))
-
-  while(i<=9){
-    document.write(dan+'x'+i+'='+(dan*i),"<br>")
-    i++
+  function add(a,b){
+    return a+b
   }
 
+  // 함수가 호출될땐 메모리 상에 존재하는데 종료되면 소멸한다.
+  // return은 함수가 호출이 종료되고 소멸되면 남는값
 </script>
 <body>
   
