--- a/자바스크립트소스/javasScript_24(do-while).html
+++ b/자바스크립트소스/javasScript_24(do-while).html
@@ -7,24 +7,12 @@
   <title>예제</title>
 </head>
 <script>
-
-  // 반복문
-  // while
-  // : ~ 하는동안
-
-  // var i = 1
-  // while (i<=3){
-  //   document.write('Hello World!',"<br>")
-  //   i++
-  // }
-
-  var i = 1
-  var dan = Number(prompt("몇단?"))
-
-  while(i<=9){
-    document.write(dan+'x'+i+'='+(dan*i),"<br>")
-    i++
+  var i = 4;
+  do{   // 일단 do 문을 실행하고 와일문에서 검토 , 무조건 한번이상의 사용자 입력을 받아야할때 사용
+    document.write('Hello : '+i,"<br>")
+    i++;
   }
+  while(i<=3);
 
 </script>
 <body>
