--- a/자바스크립트소스/javasScript_26(이중while).html
+++ b/자바스크립트소스/javasScript_26(이중while).html
@@ -7,25 +7,18 @@
   <title>예제</title>
 </head>
 <script>
+  var dan = 2;
+  var i =1;
 
-  // 반복문
-  // while
-  // : ~ 하는동안
-
-  // var i = 1
-  // while (i<=3){
-  //   document.write('Hello World!',"<br>")
-  //   i++
-  // }
-
-  var i = 1
-  var dan = Number(prompt("몇단?"))
-
-  while(i<=9){
-    document.write(dan+'x'+i+'='+(dan*i),"<br>")
-    i++
+  while(dan<=9){    // 외부 while - 단 변경
+    i=1;
+    while(i<=9){  // 내부 while - 1~9
+      document.write(dan+'x'+i+'='+(dan*i),"<br>")
+      i++;
+    }
+    document.write("<br>"); // 단과 단 사이 간격
+    dan++;
   }
-
 </script>
 <body>
   
