--- a/자바스크립트소스/javasScript_27(이중for).html
+++ b/자바스크립트소스/javasScript_27(이중for).html
@@ -7,24 +7,13 @@
   <title>예제</title>
 </head>
 <script>
-
-  // 반복문
-  // while
-  // : ~ 하는동안
-
-  // var i = 1
-  // while (i<=3){
-  //   document.write('Hello World!',"<br>")
-  //   i++
-  // }
-
-  var i = 1
-  var dan = Number(prompt("몇단?"))
-
-  while(i<=9){
-    document.write(dan+'x'+i+'='+(dan*i),"<br>")
-    i++
+  for(var dan = 2 ; dan <= 9; dan ++){
+    for(var i = 1 ; i<=9; i++){
+      document.write(dan+'x'+i+'='+(dan*i),"<br>")
+    }
+    document.write("<br>")
   }
+  
 
 </script>
 <body>
