--- a/자바스크립트소스/javasScript_33(재귀함수).html
+++ b/자바스크립트소스/javasScript_33(재귀함수).html
@@ -7,25 +7,16 @@
   <title>예제</title>
 </head>
 <script>
-
-  // 반복문
-  // while
-  // : ~ 하는동안
-
-  // var i = 1
-  // while (i<=3){
-  //   document.write('Hello World!',"<br>")
-  //   i++
-  // }
-
-  var i = 1
-  var dan = Number(prompt("몇단?"))
-
-  while(i<=9){
-    document.write(dan+'x'+i+'='+(dan*i),"<br>")
-    i++
+  // 재귀함수 (recursive function)
+  // 팩토리얼 구현
+  function Factorial(n){
+    if (n==1){return 1}
+    else{
+      return n*Factorial(n-1)
+    }
   }
 
+  document.write(Factorial(5))  // 120출력
 </script>
 <body>
   
