--- a/자바스크립트소스/javasScript_35.(콜백함수,setInterval).html
+++ b/자바스크립트소스/javasScript_35.(콜백함수,setInterval).html
@@ -7,25 +7,13 @@
   <title>예제</title>
 </head>
 <script>
-
-  // 반복문
-  // while
-  // : ~ 하는동안
-
-  // var i = 1
-  // while (i<=3){
-  //   document.write('Hello World!',"<br>")
-  //   i++
-  // }
-
-  var i = 1
-  var dan = Number(prompt("몇단?"))
-
-  while(i<=9){
-    document.write(dan+'x'+i+'='+(dan*i),"<br>")
+  var i = 1 // 전역변수
+  function myFunc(){
+    console.log(i)
     i++
   }
-
+  setInterval(myFunc,1000)  // 2초마다 myFunc함수 호출
+  // 스탑워치, 음악재생시간, 자동슬라이드 등 만듬
 </script>
 <body>
   
