--- a/자바스크립트소스/javasScript_45.html
+++ b/자바스크립트소스/javasScript_45.html
@@ -8,8 +8,61 @@
 </head>
 <script>
 
+  
+  function rcs(choice){
+    alert(choice)
+    // 컴퓨터가 랜덤으로 1~3 출력, 비교를 위해 변환(가위,바위,보로)
+    // 조건문으로 비교해서 승 무 패 판별, 승률 화면 표시
+    // 화면에 출력한다. getElementById
+    
+    computer = Math.ceil(Math.random()*3)
+    if (computer == 1){
+      computer = '가위'
+      if (choice == '바위'){
+        alert('이겼습니다.')
+      }
+      else if(choice == '보'){
+        alert('졌습니다.')
+      }
+      else{
+        alert('비겼습니다.')
+      }
+    }
+    else if(computer == 2){
+      computer ='바위'
+      if (choice == '보'){
+        alert('이겼습니다.')
+      }
+      else if(choice == '가위'){
+        alert('졌습니다.')
+      }
+      else{
+        alert('비겼습니다.')
+      }
+    }
+    else{
+      computer = '보'
+      if (choice == '가위'){
+        alert('이겼습니다.')
+      }
+      else if(choice == '바위'){
+        alert('졌습니다.')
+      }
+      else{
+        alert('비겼습니다.')
+      }
+    }
+    
+    document.getElementById("Box").innerText='컴퓨터 : '+computer
+  }
+  
 </script>
 <body>
-  
+  <button onclick="rcs('가위')">가위</button>  <!-- onclick 매개변수안에 값을 넣어줌으로써 구별할 수 있다. -->
+  <button onclick="rcs('바위')">바위</button>
+  <button onclick="rcs('보')">보</button>
+  <div id="Box">
+
+  </div>
 </body>
 </html>
