--- a/자바스크립트소스/javasScript_01(dom).html
+++ b/자바스크립트소스/javasScript_01(dom).html
@@ -8,12 +8,12 @@
 </head>
 <script>
   document.write('Hello JavaScript','<br>');  // 화면이니까 <br>태그로 줄바꿈한다.
-  document.write('Hello JavaScript');     
+  document.write('Hello JavaScript',"<br>"); 
   // document : 객체 (object) 
   // document(dom) 객체가 html 요소 제어 가능 (ex - 색깔 변경, 목록 변경)
   // write : 메서드 (객체 내부의 함수) // 출력
   // 객체 : 클래스가 메모리에 실체화된 것
-
+  
 
 </script>
 <body>
