--- a/자바스크립트소스/javasScript_15(parse,Number).html
+++ b/자바스크립트소스/javasScript_15(parse,Number).html
@@ -15,7 +15,7 @@
   var num2 = Number(prompt('숫자 입력'))
   document.write(num1+num2,"<br>")
 
-// var num1 = parseInt(prompt('정수 입력'))
+// var num1 = parseInt(prompt('정수 입력')) parseInt(수, 진수) (10진수일때는 생략가능)
 // var num2 = parseInt(prompt('정수 입력'))
 
 // var result1 = num1 + num2
