--- a/jquery/jquery_ex17(getter,setter).html
+++ b/jquery/jquery_ex17(getter,setter).html
@@ -13,11 +13,16 @@
       background-color: aqua;
     }
   </style>
+  <script>
+    function myFunc(){
+      $("#mydog").attr('src','../DOM_객체/img/고양이.jpg')  // src 속성 변경 -> setter역할 수행
+      $("#mydog").attr('alt','고양이') 
+      
+    }
+  </script>
 </head>
 <body>
-  <div id = "wrap">
-
-  </div>
-  <button onclick="start()">원만들기</button>
+  <img src="../DOM_객체/img/개.jpg" alt="개" id="mydog">
+  <button onclick="myFunc()">클릭</button>
 </body>
 </html>
