--- a/jquery/jquery_j_event02.html
+++ b/jquery/jquery_j_event02.html
@@ -7,20 +7,26 @@
   <title>Document</title>
   <script src="./js/jquery.min.js"></script>
   <style>
-    #wrap{
-      width : 300px;
-      height : 300px;
-      background-color: aqua;
+    .active{
+      color: red;
+      text-decoration: underline;
+      font-weight: bold;
     }
+    
   </style>
   <script>
-    
+    $(document).ready(function(){
+      $('#btn').click(function(){
+        // 클릭시 실행 할 기능
+        $('#my-div').toggleClass('active')
+      })
+    })
   </script>
 </head>
 <body>
-  <div id = "wrap">
-
+  <div id="my-div">
+    영역
   </div>
-  <button onclick="start()">원만들기</button>
+  <button id="btn">버튼</button>
 </body>
 </html>
