--- a/jquery/jquery_j_event12(미로).html
+++ b/jquery/jquery_j_event12(미로).html
@@ -66,10 +66,18 @@
             break
         }
       }
+      function init(){
+        // displayarea에 접근해서
+        // 배열에 있는 값을 다 넣는다.
+      }
+      init() // 호출
     })
   </script>
 </head>
 <body>
+  <div id="display-area">
+
+  </div>
   <p>
     <input type="text" name="user-id" id="user-id" placeholder="ID를 입력해주세요.">
   </p>
