--- a/jquery/jquery/jquery_j_event19(checkbox).html
+++ b/jquery/jquery/jquery_j_event19(checkbox).html
@@ -13,7 +13,7 @@
     $(document).ready(function(){
       $('#check-all').click(function(){
         // if($('#check-all').is(':checked')){
-        $('input[name=info]:checkbox').prop("checked","checked")
+        $('input[name=info]:checkbox').prop("checked",true)
         // input태그의 name이 info인 체크박스, prop : 속성 (attr과 같게 쓰인다.)
         // }
         if(!$('#check-all').is(':checked')){
