--- a/jquery/jquery_animation/jquery_animation02.html
+++ b/jquery/jquery_animation/jquery_animation02.html
@@ -7,13 +7,44 @@
   <title>Document</title>
   <script src="./js/jquery.min.js"></script>
   <style>
-    
+    #box{
+      width:100px;
+      height: 100px;
+      background-color: aquamarine;
+    }
+    #box2{
+      width:100px;
+      height: 100px;
+      background-color: rgb(32, 77, 62);
+    }
   </style>
   <script>
-    
+    $(document).ready(function(){
+      $('#slideUp-btn').click(function(){ 
+        $('#box').slideUp(500, function(){ 
+          // box태그를 가진 객체가 위로 슬라이드한다. default:400 , 애니메이션 완료 시간을 설정해줄 수 있다. slide 수행 한 후의 함수를 지정해줄 수 있다.
+          alert('슬라이드 업 완료!')
+        }) 
+      })
+      $('#slideDown-btn').click(function(){
+        $('#box').slideDown(500, function(){
+          alert('슬라이드 다운 완료!')
+        })
+      })
+    })
   </script>
 </head>
 <body>
-  
+  <button id="slideUp-btn">slideUp</button>
+  <button id="slideDown-btn">slideDown</button>
+  <div id="box">
+    박스
+  </div>  
+  <div id="box">
+    박스2
+  </div>
+  <div id="box">
+    박스3
+  </div>
 </body>
 </html>
