--- a/jquery/jquery/jquery_j_event11(건반).html
+++ b/jquery/jquery/jquery_j_event11(건반).html
@@ -12,7 +12,7 @@
   <script>
     p = new Audio()
     path ='./audio/'
-    audioList = ['1_do.wav','2_re.wav','3_mi.wav','4_fa.wav','5_sol.wav','6_ra.wav','7_si.wav','8_do.wav']
+    audioList = ['1_do.wav','2_re.wav','3_mi.wav','4_pa.wav','5_sol.wav','6_ra.wav','7_si.wav','8_do.wav']
     $(document).ready(function(){
       $('#keyboard').on('keydown',keyEventFnc)
       function keyEventFnc(e){
