js 게임만들기

--- a/자바스크립트_게임만들기/02Cal02.html
+++ b/자바스크립트_게임만들기/02Cal02.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <input readonly id="operator">  <!-- readonly : 키보드로 input칸을 쓸 수 없다. 하지만 자바스크립트로는 가능-->
+  <input readonly id="operator">  <!-- readonly : 키보드로 input칸을 쓸 수 없다. 하지만 자바스크립트로는 입력가능-->
   <input readonly type="number" id="result">
   <div class = "row">
     <button id = "num-7">7</button>
