--- a/자바스크립트_게임만들기/03Baseball02(forEach).html
+++ b/자바스크립트_게임만들기/03Baseball02(forEach).html
@@ -70,19 +70,21 @@
       let strike = 0
       let ball = 0
       
-      // answer.forEach((element,i) => {    
+      /*
+      answer.forEach((element,i) => {    
       // forEach 문 적용.배열에 있는 요소들을 순회하면서 element(요소), i (인덱스) 가 들어간다
-      //   const index = value.indexOf(element)
-      //   if(index > -1){
-      //     if (index === 1 ){
-      //       strike += 1
-      //     }
-      //     else{
-      //       ball+=1
-      //     }
-      //   }
-      // })  
-
+        const index = value.indexOf(element)
+        if(index > -1){
+          if (index === 1 ){
+            strike += 1
+          }
+          else{
+            ball+=1
+          }
+        }
+      })  
+      */
+    
       for(let i = 0; i < answer.length; i++){
         const index = value.indexOf(answer[i])  // 일치하는 숫자가 없으면 -1반환
         if(index>-1){   // 일치하는 숫자 발견 
