--- a/자바스크립트_게임만들기/04_var와let차이.html
+++ b/자바스크립트_게임만들기/04_var와let차이.html
@@ -10,7 +10,9 @@
 
 
   <script>
-    /*
+    /*  
+    ---------var 와 let의 차이 : 호이스팅---------
+    
     변수는 스코프(scope,범위)라는 것을 가진다. 
     var는 함수 스코프를 가지고, (함수 바깥에서 접근 불가능) ex) if,for,while 접근가능 -> 변수값이 변한다.
     let은 블록 스코프를 가진다. (블록{} 바깥에서 접근 불가능) -> 변수값이 블록 안에서 고정
