--- a/DOM_객체/document_ex09(create).html
+++ b/DOM_객체/document_ex09(create).html
@@ -17,7 +17,7 @@
       var myWrap = document.getElementById('wrap')
       var myInput = document.createElement('input')
       // input태그 생성
-      myWrap.appendChild(myInput)
+      myWrap.appendChild(myInput)   // append만 해줘도 된다.
       // wrap의 자식요소로 myInput를 추가
     }
   </script>
