--- a/jquery/jquery/jquery_ex13(eq,lt,gt).html
+++ b/jquery/jquery/jquery_ex13(eq,lt,gt).html
@@ -17,14 +17,14 @@
       })
     })
     
-    $(document).ready(function(){ // eq(n) : lt (less than) : ~보다 작은
+    $(document).ready(function(){ // lt(n) : lt (less than) : ~보다 작은
       $("#menu>li:lt(3)").css({
         "backgroundColor":"yellow",
         "border" : "3px solid blue"
       })
     })
     
-    $(document).ready(function(){ // eq(n) : gt (greater than) : ~보다 큰
+    $(document).ready(function(){ // gt(n) : gt (greater than) : ~보다 큰
       $("#menu>li:gt(3)").css({
         "backgroundColor":"green",
         "border" : "3px solid blue"
