--- a/jquery/jquery/jquery_ex17(getter,setter).html
+++ b/jquery/jquery/jquery_ex17(getter,setter).html
@@ -15,14 +15,14 @@
   </style>
   <script>
     function myFunc(){
-      $("#mydog").attr('src','../DOM_객체/img/고양이.jpg')  // src 속성 변경 -> setter역할 수행
+      $("#mydog").attr('src','../../DOM_객체/img/고양이.jpg')  // src 속성 변경 -> setter역할 수행
       $("#mydog").attr('alt','고양이') 
       
     }
   </script>
 </head>
 <body>
-  <img src="../DOM_객체/img/개.jpg" alt="개" id="mydog">
+  <img src="../../DOM_객체/img/개.jpg" alt="개" id="mydog">
   <button onclick="myFunc()">클릭</button>
 </body>
 </html>
