--- a/jquery/jquery/jquery_j_event05(on메서드).html
+++ b/jquery/jquery/jquery_j_event05(on메서드).html
@@ -16,7 +16,7 @@
   </style>
   <script>
     $(document).ready(function(){ // on 메서드 안에 중괄호 넣고, 여러 이벤트 설정
-        $('#btn').on({            // #btn 태그 기준!!
+        $('#btn').on({            // #btn 태그 기준!! , {}로 묶어줬기떄문에 딕셔너리 형태로 입력
         mouseover:function(){     // 마우스가 위에 올라가면 (css의 hover기능)
           $('#my-div').css('color','orange')  // #my-div에 css적용
         },
