--- a/jquery/jquery/jquery_j_event07(scroll).html
+++ b/jquery/jquery/jquery_j_event07(scroll).html
@@ -29,6 +29,14 @@
         $('.left').text(sc_left)
       })
     })
+    // 이렇게 해도 작동 된다. on안에 적용되는 함수가 하나라서 생략가능
+    // $(window).scroll(function(){ 
+    //     var sc_top = $(this).scrollTop()  
+    //     var sc_left = $(this).scrollLeft()
+    //     $('.top').text(sc_top)
+    //     $('.left').text(sc_left)
+    //   })
+    // })
      
   </script>
 </head>
