--- a/jquery/jquery_animation/jquery_animation10(animate4way).html
+++ b/jquery/jquery_animation/jquery_animation10(animate4way).html
@@ -26,7 +26,7 @@
       $('#leftbtn').click(function(){
         $('#box').animate({'left':'-=100px'})
       })
-      $('rightbtn').click(function(){
+      $('#rightbtn').click(function(){
         $('#box').animate({'left':'+=100px'})
       })
     })
