--- a/자바스크립트소스/ex/javasScript_51(Date).html
+++ b/자바스크립트소스/ex/javasScript_51(Date).html
@@ -12,7 +12,7 @@
   // new - 메모리 생성 연산자
   // new Date - Date 객체 생성
   var year = myDate.getFullYear() // 년
-  var month = myDate.getMonth()+1 // 월
+  var month = myDate.getMonth()+1 // 월, 월은 0부터 받아온다.
   var day = myDate.getDate()      // 일
   var hour = myDate.getHours()    // 시
   var min = myDate.getMinutes()   // 분
