--- a/jquery/jquery/jquery_ex12(even,odd구현).html
+++ b/jquery/jquery/jquery_ex12(even,odd구현).html
@@ -22,14 +22,16 @@
     <li>리스트7: index 6</li>
     <li>리스트8: index 7</li>
   </ul>
-  <button id="my_even()">even 적용</button>
-  <button id="my_odd()">odd 적용</button>
+  <button onclick="my_even()">even 적용</button>
+  <button onclick="my_odd()">odd 적용</button>
 
   <script>
     let i = 0
     const $menu = document.getElementById("menu")
     // $menu.style.backgroundColor="red"
     var l = $menu.children
+    
+    console.log(l.length)
     function my_even() {
         for (i = 0; i < l.length; i++) {
           if (i % 2 == 0) {
@@ -37,7 +39,7 @@
           }
         }
       }
-    
+
   </script>
 </body>
 </html>
