--- a/jquery/jquery/jquery_j_event02(toggle).html
+++ b/jquery/jquery/jquery_j_event02(toggle).html
@@ -18,7 +18,7 @@
     $(document).ready(function(){
       $('#btn').click(function(){
         // 클릭시 실행 할 기능
-        $('#my-div').toggleClass('active')
+        $('#my-div').toggleClass('active')  // 해당 클래스가 없으면 추가, 있으면 제거
       })
     })
   </script>
