--- a/React/02(ReactDOM).html
+++ b/React/02(ReactDOM).html
@@ -22,8 +22,11 @@
 
       const element = React.createElement("h1",{
         className : "title",
-        children : ["Hello, world! "," It's me! "," good "]
-      } );
+        children : ["Hello, world! "," It's me! "," good "],
+        // children : "dd"
+      } );  // children 안에 배열로 묶어주면 한 태그안에 연속으로 입력된것으로 처리.
+            // children이 여러개일 경우 마지막에 나온 children만 표시.
+
       console.log(element);
       console.log(elementV);
       ReactDOM.render(element, rootElement);
