--- a/React/04(Multi Element).html
+++ b/React/04(Multi Element).html
@@ -31,6 +31,7 @@
       // const rootElement = document.getElementById("root");
       // const element = <div className ="box" children={
       //   [
+  //   React.createElement는 태그,클래스 명,내용 순서로 쓴다.
       //   React.createElement('h1',null,'Hi'),
       //   React.createElement('h3',null,'Bye'),
       //   React.createElement('h5',null,'Children')
