--- a/React/05(Element찍어내기).html
+++ b/React/05(Element찍어내기).html
@@ -32,6 +32,7 @@
       )
 
       // 맨 앞 글자를 대문자로 써야 일반 태그처럼 사용할 수 있다.
+      // Custom Element 라고 부른다.
       const Paint = ({title,description,children}) =>( 
       <>        
         <h1>{title}</h1>
