--- a/jquery/웹디자인기능사_실기재료/2번.Green복지재단/index.html
+++ b/jquery/웹디자인기능사_실기재료/2번.Green복지재단/index.html
@@ -100,7 +100,7 @@
         <div class="notice">
           <h3>공지사항</h3>
           <ul class="notice_list">
-            <li><a href="#">초록우산 보물찾기 여행 모집</a><span>2020.11.02</span></li>
+            <li id="pop"><a href="#">초록우산 보물찾기 여행 모집</a><span>2020.11.02</span></li>
             <li><a href="#">초록우산 사업장 후원자 모집</a><span>2020.11.02</span></li>
             <li><a href="#">그린 합창단 2기 모집</a><span>2020.11.02</span></li>
             <li><a href="#">그린 합창단 1회 정기공연</a><span>2020.11.02</span></li>
