--- a/React/08(리렌더링).html
+++ b/React/08(리렌더링).html
@@ -19,7 +19,8 @@
 
     <div id="root"></div>
 
-    <script type="text/babel">  
+    <script type="text/babel">
+    // 바닐라JS : 변경되는 element를 전부 다 다시 그린다.  
       // const rootElement = document.getElementById("root")
       // function random(){
       //   const number = Math.floor(Math.random()*10)+1
@@ -31,6 +32,7 @@
       // setInterval(random,1000)
       // random()
       
+    // React : 변경되는 부분만 다시 그린다.
       const rootElement = document.getElementById("root")
       function random(){
         const number = Math.floor(Math.random()*10)+1
